Fix alignment

--- a/src/ui/Calendar.css
+++ b/src/ui/Calendar.css
@@ -5,6 +5,7 @@
 .calendar-body .calendar-grid-item{
     width: 13vw;
     display: inline-block;
+    border: transparent 1px solid;
 }
 
 .calendar-body .calendar-block{
